add error chart and bias

--- a/app/assets/chart/error_dist.html
+++ b/app/assets/chart/error_dist.html
@@ -1,4 +1,3 @@
-<!-- line_chart.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,12 +17,10 @@
     <div id="chart"></div>
   </div>
 
-  <!-- ECharts CDN -->
   <script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
 
   <script>
-    // Injected payload
-    window.__LINE_CHART_PAYLOAD__ = {{PAYLOAD_JSON}};
+    window.__ERROR_DIST_PAYLOAD__ = {{PAYLOAD_JSON}};
   </script>
 
   <script>
