--- a/app/assets/kpi/global.html
+++ b/app/assets/kpi/global.html
@@ -2,8 +2,8 @@
     Overall model performance aggregated across all locations and years,
     evaluated using the primary prediction model against rainfall values
     extracted from historical charts.
-    Metrics are computed on records with complete feature availability
-    and are shown for global reference only.
+    Metrics are computed on records with at least one valid predictor
+    available and are shown for global reference only.
 </div>
 
 <div class="kpi-strip">
