update app structure, update dashboard

--- a/app/assets/footer.html
+++ b/app/assets/footer.html
@@ -4,6 +4,6 @@
     <a href="https://www.linkedin.com/in/muhammad-rafli-azrarsyah/" target="_blank">LinkedIn</a>
     <br/>
     Data sources:
-    <a href="https://data.gov.sg/" target="_blank">data.gov.sg</a> -
+    <a href="https://www.weather.gov.sg/" target="_blank">weather.gov.sg</a> -
     <a href="https://open-meteo.com" target="_blank">Open-Meteo</a>
 </div>
